--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
-[package]
-name = "builder_revmc"
-version = "0.1.0"
-edition = "2021"
+[workspace]
+members = ["crates/*"]
+default-members = ["crates/builder-revmc"]
 resolver = "2"
-rust-version = "1.79"
 
-[dependencies]
+[workspace.dependencies]
+builder-revmc = { path = "crates/builder-revmc" }
+
 reth-db = { git = "https://github.com/paradigmxyz/reth" } 
 reth-provider = { git = "https://github.com/paradigmxyz/reth" } 
 reth-chainspec = { git = "https://github.com/paradigmxyz/reth" } 
@@ -13,13 +13,13 @@ reth-revm = { git = "https://github.com/paradigmxyz/reth" }
 reth-primitives = { git = "https://github.com/paradigmxyz/reth", features = ["c-kzg"] } 
 reth-rpc-types = { git = "https://github.com/paradigmxyz/reth" }
 revmc = { git = "https://github.com/paradigmxyz/revmc" }
-revmc-build = { git = "https://github.com/paradigmxyz/revmc" }
 revmc-builtins = { git = "https://github.com/paradigmxyz/revmc" }
 revmc-context = { git = "https://github.com/paradigmxyz/revmc" }
+revmc-build = { git = "https://github.com/paradigmxyz/revmc" }
+revm-interpreter = "6.0.0"
 revm = "10.0.0"
 dotenv = "0.15.0"
 eyre = "0.6.12"
 cc = "1.0.104"
 libloading = "0.8.4"
-revm-interpreter = "6.0.0"
-
+hex = "0.4.3"
