--- a/crates/revmc-sim/Cargo.toml
+++ b/crates/revmc-sim/Cargo.toml
@@ -11,6 +11,8 @@ reth-chainspec.workspace = true
 reth-revm.workspace = true
 reth-primitives.workspace = true
 reth-rpc-types.workspace = true
+reth-evm-ethereum.workspace = true
+reth-evm.workspace = true
 revmc.workspace = true
 revmc-builtins.workspace = true
 revmc-context.workspace = true
