--- a/crates/revmc-sim-build/Cargo.toml
+++ b/crates/revmc-sim-build/Cargo.toml
@@ -5,26 +5,13 @@ edition = "2021"
 rust-version = "1.79"
 
 [dependencies]
-reth-db.workspace = true
-reth-provider.workspace = true
-reth-chainspec.workspace = true
-reth-revm.workspace = true
-reth-primitives.workspace = true
-reth-rpc-types.workspace = true
-reth-evm-ethereum.workspace = true
-reth-evm.workspace = true
 revmc.workspace = true
-revmc-builtins.workspace = true
-revmc-context.workspace = true
-revmc-build.workspace = true
-revm-interpreter.workspace = true
-revm.workspace = true
-dotenv.workspace = true
+revm = { workspace = true, features = ["serde"] }
 eyre.workspace = true
-cc.workspace = true
-libloading.workspace = true
-hex.workspace = true
 rayon = "1.10.0"
+serde = { version = "1.0.204", features = ["derive"] }
+serde_json = "1.0.120"
+hex.workspace = true
 
 [build-dependencies]
 revmc-build.workspace = true
