--- a/crates/revmc-sim-cli/Cargo.toml
+++ b/crates/revmc-sim-cli/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2021"
 rust-version = "1.79"
 
 [dependencies]
+revmc-sim-build.workspace = true
+revmc-sim-load.workspace = true
+
 reth-db.workspace = true
 reth-provider.workspace = true
 reth-chainspec.workspace = true
