--- a/crates/revmc-sim-cli/Cargo.toml
+++ b/crates/revmc-sim-cli/Cargo.toml
@@ -28,6 +28,10 @@ cc.workspace = true
 libloading.workspace = true
 hex.workspace = true
 rayon = "1.10.0"
+clap = "4.5.8"
+criterion = "0.5.1"
+serde = { version = "1.0.204", features = ["derive"] }
+serde_json = "1.0.120"
 
 [build-dependencies]
 revmc-build.workspace = true
