--- a/crates/revmc-sim-build/Cargo.toml
+++ b/crates/revmc-sim-build/Cargo.toml
@@ -12,3 +12,4 @@ rayon = "1.10.0"
 serde = { version = "1.0.204", features = ["derive"] }
 serde_json = "1.0.120"
 hex.workspace = true
+tracing = "0.1.40"
