--- a/crates/revmc-sim-cli/Cargo.toml
+++ b/crates/revmc-sim-cli/Cargo.toml
@@ -34,6 +34,7 @@ serde = { version = "1.0.204", features = ["derive"] }
 serde_json = "1.0.120"
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
+csv = "1.3.0"
 
 [build-dependencies]
 revmc-build.workspace = true
