--- a/crates/revmc-sim-cli/Cargo.toml
+++ b/crates/revmc-sim-cli/Cargo.toml
@@ -35,6 +35,7 @@ serde_json = "1.0.120"
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 csv = "1.3.0"
+rand = "0.8.5"
 
 [build-dependencies]
 revmc-build.workspace = true
