--- a/crates/revmc-sim-cli/Cargo.toml
+++ b/crates/revmc-sim-cli/Cargo.toml
@@ -36,6 +36,7 @@ tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 csv = "1.3.0"
 rand = "0.8.5"
+rand_chacha = "0.3.1"
 
 [build-dependencies]
 revmc-build.workspace = true
