--- a/crates/bench/Cargo.toml
+++ b/crates/bench/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "revmc-sim-cli"
+name = "revmc-toolbox-bench"
 version = "0.1.0"
 edition = "2021"
 rust-version = "1.79"
 
 [dependencies]
-revmc-sim-build.workspace = true
-revmc-sim-load.workspace = true
+revmc-toolbox-build.workspace = true
+revmc-toolbox-load.workspace = true
 
 reth-db.workspace = true
 reth-provider.workspace = true
