--- a/crates/bench/Cargo.toml
+++ b/crates/bench/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
-name = "revmc-toolbox-bench"
+name = "revmc-toolkit-bench"
 version = "0.1.0"
 edition = "2021"
 rust-version = "1.79"
 
 [dependencies]
-revmc-toolbox-build.workspace = true
-revmc-toolbox-load.workspace = true
-revmc-toolbox-sim.workspace = true
-revmc-toolbox-utils.workspace = true
+revmc-toolkit-build.workspace = true
+revmc-toolkit-load.workspace = true
+revmc-toolkit-sim.workspace = true
+revmc-toolkit-utils.workspace = true
 
 reth-db.workspace = true
 reth-provider.workspace = true
