--- a/crates/utils/Cargo.toml
+++ b/crates/utils/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "revmc-toolbox-utils"
+name = "revmc-toolkit-utils"
 version = "0.1.0"
 edition = "2021"
 rust-version = "1.79"
 
 [dependencies]
-revmc-toolbox-build.workspace = true
-revmc-toolbox-load.workspace = true
+revmc-toolkit-build.workspace = true
+revmc-toolkit-load.workspace = true
 
 reth-db.workspace = true
 reth-provider.workspace = true
