--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [workspace]
-members = ["crates/*"]
+members = ["crates/*", "bin/*"]
 default-members = [
     "crates/load", 
     "crates/build",
     "crates/sim",
-    "crates/utils"
+    "crates/utils",
+    "bin/gas-guzzlers"
 ]
 resolver = "2"
 
@@ -32,4 +33,6 @@ dotenv = "0.15.0"
 eyre = "0.6.12"
 cc = "1.0.104"
 libloading = "0.8.4"
+serde = { version = "1.0.215", features = ["derive"] }
+serde_json = "1.0.133"
 hex = "0.4.3"
