--- a/crates/sim/Cargo.toml
+++ b/crates/sim/Cargo.toml
@@ -31,8 +31,8 @@ hex.workspace = true
 rayon = "1.10.0"
 clap = "4.5.8"
 criterion = "0.5.1"
-serde = { version = "1.0.204", features = ["derive"] }
-serde_json = "1.0.120"
+serde.workspace = true
+serde_json.workspace = true
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 csv = "1.3.0"
