nightly rust for ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,9 @@ jobs:
       - name: Set up Rust
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: stable
+          toolchain: nightly
+          components: clippy, rustfmt
+          override: true
 
       - name: Run cargo fmt
         run: cargo fmt --all -- --check
